tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_challenges.certmanager.k8s.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  labels:
    app: certmanager
    kustomize.component: istio-crds
  name: challenges.group: cert-manager.io
spec:
  additionalPrinterColumns:
  - JSONPath: .status.state
    name: State
    type: string
  - JSONPath: .spec.dnsName
    name: Domain
    type: string
  - JSONPath: .status.reason
    name: Reason
    type: string
  - JSONPath: .metadata.creationTimestamp
    description: |-
      CreationTimestamp is a timestamp representing the server time when this object was created. It is not guaranteed to be set in happens-before order across separate operations. Clients may not set this value. It is represented in RFC3339 form and is in UTC.

      Populated by the system. Read-only. Null for lists. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
    name: Age
    type: date
  group: group: cert-manager.io
  names:
    kind: Challenge
    plural: challenges
  scope: Namespaced
  versions:
  - name: v1alpha1
    served: true
    storage: true
