tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/config.istio.io_v1alpha2_rule_promtcpconnectionopen.yaml
apiVersion: config.istio.io/v1alpha2
kind: rule
metadata:
  labels:
    app: mixer
  name: promtcpconnectionopen
  namespace: istio-system
spec:
  actions:
  - handler: prometheus
    instances:
    - tcpconnectionsopened
  match: context.protocol == "tcp" && ((connection.event | "na") == "open")
