tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/policy_v1beta1_poddisruptionbudget_istio-pilot.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  labels:
    app: pilot
    istio: pilot
  name: istio-pilot
  namespace: istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: pilot
      istio: pilot
