tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/policy_v1beta1_poddisruptionbudget_istio-policy.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  labels:
    app: policy
    istio: mixer
    istio-mixer-type: policy
    version: 1.1.0
  name: istio-policy
  namespace: istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: policy
      istio: mixer
      istio-mixer-type: policy
