tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/~g_v1_configmap_istio-install-config.yaml
apiVersion: v1
data:
  namespace: istio-system
kind: ConfigMap
metadata:
  name: istio-install-config
  namespace: istio-system
