tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/~g_v1_service_istio-citadel.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: security
    istio: citadel
  name: istio-citadel
  namespace: istio-system
spec:
  ports:
  - name: grpc-citadel
    port: 8060
    protocol: TCP
    targetPort: 8060
  - name: http-monitoring
    port: 15014
  selector:
    istio: citadel
