tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/~g_v1_service_istio-policy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/exportTo: '*'
  labels:
    app: mixer
    istio: mixer
  name: istio-policy
  namespace: istio-system
spec:
  ports:
  - name: grpc-mixer
    port: 9091
  - name: grpc-mixer-mtls
    port: 15004
  - name: http-monitoring
    port: 15014
  selector:
    istio: mixer
    istio-mixer-type: policy
