tests/stacks/ibm/application/istio-1-3-1-stack/test_data/expected/~g_v1_serviceaccount_istio-citadel-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: security
  name: istio-citadel-service-account
  namespace: istio-system
